# testapp

./: CMakeLists.txt  Readme.md
client/: CMakeLists.txt  client.cpp
client/src/: client.cpp  ledclient.cpp  ledclient.h
server/: CMakeLists.txt  server.cpp
server/src/: abstractcommand.h  commands.cpp  commands.h  ledlight.cpp  ledlight.h  ledvisualizer.cpp  ledvisualizer.h  server.cpp  syncserver.cpp  syncserver.h  tcpserver.cpp  tcpserver.h
